# nice-i3blocks

./: Cargo.toml  LICENSE  Makefile  README.md  flake.nix
src/: bandwidth.rs  cpu_usage.rs  mem_usage.rs  pomodoro.rs
