[package]
name = "nice-i3blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
humantime = { version = "2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[[bin]]
name = "pomodoro"
path = "src/pomodoro.rs"

[[bin]]
name = "cpu_usage"
path = "src/cpu_usage.rs"
